<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.BloodPressureFragment"
    android:orientation="vertical"
    android:weightSum="5">

    <FrameLayout
        android:id="@+id/container_pressure_top_row"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/line"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/time"
            android:text="@string/date"
            android:textSize="30sp"
            android:gravity="left"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintLeft_toRightOf="@id/date"
            app:layout_constraintRight_toLeftOf="@id/systoliki"
            android:text="@string/time"
            android:textSize="30sp"
            android:gravity="center"/>
        <TextView
            android:id="@+id/systoliki"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toLeftOf="@+id/diastoliki"
            app:layout_constraintLeft_toRightOf="@id/time"
            android:text="@string/systoliki"
            android:textSize="30sp"
            android:gravity="center"
            />
        <TextView
            android:id="@+id/diastoliki"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toLeftOf="@+id/pulse"
            app:layout_constraintLeft_toRightOf="@id/systoliki"
            android:textSize="30sp"
            android:text="@string/diastoliki"
            android:gravity="center" />
        <TextView
            android:id="@+id/pulse"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/diastoliki"
            android:textSize="30sp"
            android:text="@string/pulse"
            android:gravity="right"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/container_pressure_bottom_row"
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="4"/>

</LinearLayout>