<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:background="@color/backgroundColor">


 <TextView
     android:id="@+id/textViewSmartRoom"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toTopOf="@id/guideLineHor010"
     android:text="@string/smartRoom"
     android:textSize="50sp"
     android:gravity="center"
     android:paddingHorizontal="5dp" />

 <LinearLayout
     android:id="@+id/lightLayout"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintTop_toBottomOf="@id/textViewSmartRoom"
     app:layout_constraintRight_toLeftOf="@id/guideLineVer05"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintBottom_toTopOf="@+id/buttonBoiler"
     android:layout_margin="10dp"
     android:background="@drawable/my_button"
     android:orientation="vertical"
     android:weightSum="5"
     android:clickable="true"
     android:focusable="true">

  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/lamp"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/light"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"

      />

 </LinearLayout>

 <LinearLayout
     android:id="@+id/buttonTemp"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintTop_toBottomOf="@id/textViewSmartRoom"
     app:layout_constraintLeft_toRightOf="@id/guideLineVer05"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toTopOf="@+id/buttonIntercom"
     android:layout_margin="10dp"
     android:background="@drawable/my_button"
     android:clickable="true"
     android:orientation="vertical"
     android:focusable="true" >

  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/temp"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/temp"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"

      />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/buttonBoiler"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintTop_toBottomOf="@id/lightLayout"
     app:layout_constraintBottom_toTopOf="@id/guideLineHor055"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toLeftOf="@id/guideLineVer05"
     android:layout_margin="10dp"
     android:background="@drawable/my_button"
     android:orientation="vertical">

  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/boiler"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/boiler"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"

      />
 </LinearLayout>

 <LinearLayout
     android:id="@+id/buttonIntercom"
     android:layout_width="0dp"
     android:layout_height="0dp"
     app:layout_constraintTop_toBottomOf="@id/buttonTemp"
     app:layout_constraintBottom_toTopOf="@id/guideLineHor055"
     app:layout_constraintLeft_toRightOf="@id/guideLineVer05"
     app:layout_constraintRight_toRightOf="parent"
     android:layout_margin="10dp"
     android:background="@drawable/my_button"
     android:orientation="vertical">
  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/intercom"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/intercom"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"

      />
 </LinearLayout>
 <LinearLayout
     android:id="@+id/roller"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:background="@drawable/my_button"
     app:layout_constraintTop_toTopOf="@id/buttonHealth"
     app:layout_constraintLeft_toLeftOf="@id/buttonBoiler"
     app:layout_constraintRight_toLeftOf="@id/guideLineVer05"
     app:layout_constraintBottom_toBottomOf="@id/buttonHealth"
     android:orientation="vertical"
     >

  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/roller_1"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />
  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/rollers"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"
      />


 </LinearLayout>

 <LinearLayout
     android:id="@+id/buttonHealth"
     android:layout_width="0dp"
     android:layout_height="0dp"
     android:layout_margin="10dp"
     app:layout_constraintTop_toBottomOf="@+id/guideLineHor055"
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintBottom_toTopOf="@id/mic"
     app:layout_constraintLeft_toRightOf="@id/guideLineVer05"
     android:background="@drawable/my_button"
     android:orientation="vertical">

  <ImageView
      android:layout_margin="5dp"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:src="@drawable/health"
      android:scaleType="fitCenter"
      android:layout_weight="4"
      />

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/health"
      android:layout_weight="1"
      android:gravity="center"
      android:textSize="30sp"
      android:paddingHorizontal="5dp"
      />
 </LinearLayout>

<LinearLayout
    android:id="@+id/mic"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/buttonHealth"
    android:background="@drawable/my_button"
    android:layout_margin="10dp"
    android:orientation="horizontal"
    android:weightSum="20">
 <LinearLayout
     android:layout_weight="19"
     android:id="@+id/buttonMic"
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="vertical">

  <ImageButton
      android:id="@+id/button"
      android:layout_width="750dp"
      android:layout_height="187dp"
      android:layout_margin="5dp"
      android:layout_weight="4"
      android:backgroundTint="@color/transparent"
      android:scaleType="fitCenter"
      android:src="@drawable/micro"
      />

  <TextView
      android:id="@+id/promptForTalk"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_weight="1"
      android:gravity="center"
      android:text="@string/tap_on_mic"
      android:textSize="30sp" />
 </LinearLayout>

 <ImageView
     android:id="@+id/questImg"
     android:layout_width="0dp"
     android:layout_height="100dp"
     android:src="@drawable/quest"
     android:layout_weight="1"
     android:layout_margin="5dp"
     />



</LinearLayout>

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideLineVer05"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_constraintGuide_percent="0.5"
     />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideLineHor055"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.55" />

 <androidx.constraintlayout.widget.Guideline
     android:id="@+id/guideLineHor010"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     app:layout_constraintGuide_percent="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>