<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TheBloodActivity"
    android:background="@color/backgroundColor">

    <include
        android:id="@+id/back_button"
        layout="@layout/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="@id/guideLineVer07"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/promptPerson"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor01"
        android:text="@string/prompt_for_measurements"
        android:textSize="50sp"
        android:gravity="center"
        android:layout_margin="50dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bloodSugerBtn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@id/guideLineHor05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/my_button"
        android:layout_margin="50dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bloodSugerBtn"
            app:layout_constraintBottom_toBottomOf="@id/bloodSugerBtn"
            app:layout_constraintLeft_toLeftOf="@id/bloodSugerBtn"
            app:layout_constraintRight_toRightOf="@id/bloodSugerBtn"
            android:text="@string/blood_sugar"
            android:textSize="50sp"
            android:textAlignment="center"
            android:gravity="center_horizontal" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bloodPresureBtn"
        android:layout_width="500dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor05"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@drawable/my_button"
        android:layout_margin="50dp"
        android:clickable="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/bloodPresureBtn"
            app:layout_constraintBottom_toBottomOf="@id/bloodPresureBtn"
            app:layout_constraintLeft_toLeftOf="@id/bloodPresureBtn"
            app:layout_constraintRight_toRightOf="@id/bloodPresureBtn"
            android:text="@string/blood_pressure"
            android:textSize="50sp"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVer07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>