<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.DoorActivity"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/questImg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/guideLineVer01"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLineHor01"
        android:src="@drawable/quest"
        android:padding="20dp"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVer01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <include layout="@layout/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="@id/guideLineVer07"
        app:layout_constraintRight_toRightOf="parent" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLineHor07"
        android:orientation="vertical"
        android:weightSum="10">


        <TextView
            android:id="@+id/intercomText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/door"
            android:textSize="50sp"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageView
            android:id="@+id/lighImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="9"
            android:background="#8E8282"
            android:padding="10dp"
            android:src="@drawable/human" />

    </LinearLayout>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVer07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/openDoor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/openTheDoor"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center"
                android:padding="10dp"
                android:layout_gravity="center"

                />
            <TextView
                android:id="@+id/talkPromptTextV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:text="@string/talkText"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:padding="10dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:weightSum="2"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/openDoorBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/my_button"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:text="@string/open"
                    android:textSize="50sp"
                    android:gravity="center"
                    android:padding="10dp"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/talkBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@drawable/my_button"
                android:padding="10dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="10dp">


                    <TextView
                        android:id="@+id/talkText"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/micImg"
                        android:text="@string/talk"
                        android:textSize="50sp"
                        android:gravity="center"
                        android:padding="10dp"
                        />

                    <ImageView
                        android:id="@+id/micImg"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
