<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LightActivity"
    android:background="@color/backgroundColor">

    <include layout="@layout/back_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="@id/guideLineVer07"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/lightImage"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:padding="10dp"
        android:src="@drawable/light"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLineHor07"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor01"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideLineHor07"
        android:orientation="vertical"
        android:weightSum="10">


        <TextView
            android:id="@+id/lightText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/light"
            android:textSize="60sp"
            android:layout_weight="1"
            android:gravity="center" />

        <ImageView
            android:id="@+id/lampImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9"
            android:padding="10dp"
            android:src="@drawable/lamp" />



    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineHor01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideLineVer07"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/guideLineHor07"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical"
        android:weightSum="4"
        android:padding="10dp">

        <TextView
            android:id="@+id/openCloseBoiler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/openTheLamp"
            android:textSize="30sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/lightButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@drawable/my_button"
            android:padding="10dp">

            <TextView
                android:id="@+id/openCloseTextView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:text="@string/open"
                android:textSize="60sp"
                android:gravity="center"
                android:padding="30dp"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>